[update]GETの実装(postgresコンテナ)

--- a/postgres/conf/application.conf
+++ b/postgres/conf/application.conf
@@ -5,10 +5,11 @@ slick.dbs.default {
   profile = "slick.jdbc.PostgresProfile$"
   db {
     driver = org.postgresql.Driver
-    url = "jdbc:postgresql://localhost:5432/slick_db_development"
+    url = "jdbc:postgresql://localhost:5432/postgres"
     databaseName = "slick_db_development"
     user = "root"
     password = "root"
   }
   numThreads = 10
 }
+
